--- a/supervisord.conf
+++ b/supervisord.conf
@@ -18,6 +18,16 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stdout
 stderr_logfile_maxbytes=0
 
+[program:logstash]
+command=/usr/share/logstash/bin/logstash --path.settings /etc/logstash
+autostart=true
+autorestart=true
+priority=5
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stdout
+stderr_logfile_maxbytes=0
+
 [program:crontab]
 command=/usr/sbin/cron -f -l -L 15
 redirect_stderr=true 
