Add default values to null fields

--- a/caddy-stdout.conf
+++ b/caddy-stdout.conf
@@ -17,6 +17,16 @@ filter {
                 add_field => { "[resp_headers][X-Username]" => "anonymous" }
             }
         }
+        if ![request][headers][Referer] {
+            mutate {
+                add_field => { "[request][headers][Referer]" => "" }
+            }
+        }        
+        if ![request][headers][User-Agent] {
+            mutate {
+                add_field => { "[request][headers][User-Agent]" => "" }
+            }
+        }
     }
     date {
         match => ["timestamp", "UNIX"]
