--- a/Caddyfile
+++ b/Caddyfile
@@ -17,13 +17,8 @@
 
 {$SERVER_NAME:localhost} {
     log default {
-        output file /var/log/caddy/access.log {
-            roll true
-            roll_size 50MiB
-            roll_keep 5
-            roll_keep_for 3d
-        }
-        format json
+        output stdout
+        format console
     }
 
 	root * public/
