--- a/supervisord.conf
+++ b/supervisord.conf
@@ -13,10 +13,9 @@ command=/usr/local/bin/frankenphp run --config /etc/caddy/Caddyfile --adapter ca
 autostart=true
 autorestart=true
 priority=5
+redirect_stderr=true 
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stdout
-stderr_logfile_maxbytes=0
 
 # [program:logstash]
 # command=/usr/share/logstash/bin/logstash --path.settings /etc/logstash
@@ -29,15 +28,12 @@ stderr_logfile_maxbytes=0
 # stderr_logfile_maxbytes=0
 
 [program:crontab]
-command=/usr/sbin/cron -f -l -L 15
+command=/usr/sbin/cron -f
+autostart=true
+autorestart=true
 redirect_stderr=true 
-syslog=true
-syslog_facility=local0
-syslog_tag="crontabd"
-syslog_stdout_priority=info
-syslog_stderr_priority=err
-stdout_syslog=true
-stderr_syslog=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
 
 [include]
 files = /etc/supervisor/conf.d/*.conf
