--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -3,19 +3,18 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - 'master'
+      - "master"
   workflow_dispatch:
   schedule:
-    - cron: '0 23 * * 1,5'
-      
-      
+    - cron: "0 23 * * 1,5"
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -31,4 +30,4 @@ jobs:
           push: true
           tags: |
             jftecnologia/frankenphp:8.4
-            
+            jftecnologia/frankenphp:latest
