--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,7 +8,7 @@ loglevel=info
 pidfile = /var/run/supervisord.pid
 
 [program:frankenphp]
-user=sail
+user=%(ENV_WWWUSER)s
 command=/usr/local/bin/frankenphp run --config /etc/caddy/Caddyfile --adapter caddyfile
 autostart=true
 autorestart=true
