--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -1,33 +1,42 @@
 name: Build and Push Docker Image
 
 on:
-  push:
-    branches:
-      - "master"
-  workflow_dispatch:
-  schedule:
-    - cron: "0 23 * * 1,5"
+    push:
+        branches:
+            - "master"
+    workflow_dispatch:
+    schedule:
+        - cron: "0 23 * * 1,5"
 
 jobs:
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+    build-and-push:
+        runs-on: ubuntu-latest
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        strategy:
+            fail-fast: false
+            matrix:
+                php_version: ["8.3", "8.4", "8.5"]
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+        steps:
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
 
-      - name: Build and push
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          tags: |
-            jftecnologia/frankenphp:8.4
-            jftecnologia/frankenphp:latest
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Build and push
+              uses: docker/build-push-action@v6
+              with:
+                  context: .
+                  file: ./Dockerfile
+                  push: true
+                  build-args: |
+                      PHP_VERSION=${{ matrix.php_version }}
+                  tags: |
+                      jftecnologia/frankenphp:${{ matrix.php_version }}
