--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -38,3 +38,4 @@ jobs:
                       PHP_VERSION=${{ matrix.php_version }}
                   tags: |
                       jftecnologia/frankenphp:${{ matrix.php_version }}
+                      ${{ matrix.php_version == '8.5' && 'jftecnologia/frankenphp:latest' || '' }}
